@@ -1,3 +1,7 @@
+2002-09-08  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
+	* \sdcc\src\SDCCglue.c: Generate areas REG_BANK_[0-3] only for 8051
+	like ports.
+
 2002-09-04  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
 	Changes to aslink (All the changes are marked with 'JCF'):
 
